# task-manager

./: .env  Cargo.toml  diesel.toml
.github/workflows/: rust.yml
migrations/: 20250811022532_create_tasks.sql  20250820192857_create_users.sql
migrations/2025-02-27-232408_create_todos/: up.sql
src/: database.rs  main.rs  models.rs  repository.rs  response.rs  schema.rs
src/constant/: error_message.rs  mod.rs  module_api.rs  success_message.rs
src/controller/: mod.rs  task_controller.rs
src/data/: database.rs  mod.rs  models.rs  repository.rs  task_model.rs  task_repository.rs
src/documentation/: mod.rs  task_docs.rs  user_docs.rs
src/module/task/: mod.rs
src/module/task/controller/: mod.rs  task_controller.rs
src/module/task/data/: mod.rs  task_model.rs  task_repository.rs
src/module/task/dto/: request.rs  response.rs
src/module/user/: mod.rs
src/module/user/controller/: mod.rs  user_controller.rs  user_repository.rs
src/module/user/data/: mod.rs  user_model.rs  user_repository.rs
src/module/user/dto/: request.rs  response.rs  user_dto.rs
src/route/: mod.rs  todos.rs
src/routes/: mod.rs  todos.rs
