[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1", features = ["derive"]}
diesel = {version = "2.2.7", features = ["postgres", "r2d2", "uuid", "serde_json"]}
dotenvy = "0.15.7"
uuid = {version = "1.15.1", features = ["v4", "serde"]}
anyhow = "1.0.96"