[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0.96"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }